--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <script src="http://yui.yahooapis.com/3.5.1/build/yui/yui-min.js"></script>
     <script src="test.js"></script>
     <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.5.1/build/overlay/assets/skins/sam/overlay.css" />
-    <link rel="stylesheet" type="text/css" href="test.css" />
+    <link id="test_stylesheet" rel="stylesheet" type="text/css" href="test.css" />
   </head>
 </html>
