--- a/index.html
+++ b/index.html
@@ -4,5 +4,17 @@
     <script src="test.js"></script>
     <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.5.1/build/overlay/assets/skins/sam/overlay.css" />
     <link id="test_stylesheet" rel="stylesheet" type="text/css" href="test.css" />
+    <style>
+      #scratch-canvas {
+        image-rendering: -moz-crisp-edges;
+        image-rendering: -webkit-optimize-contrast;
+        width: 100px;
+        height: 100px;
+      }
+    </style>
   </head>
+  <body>
+    <canvas id="scratch-canvas" style="display:block"></canvas>
+    <canvas id="final-canvas"></canvas>
+  </body>
 </html>
