Move a bunch of stuff into Image

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </style>
   </head>
   <body>
-    <canvas id="scratch-canvas" style="display:block"></canvas>
+    <canvas id="scratch-canvas" style="display:none"></canvas>
     <canvas id="final-canvas"></canvas>
   </body>
 </html>
