--- a/index.html
+++ b/index.html
@@ -4,17 +4,8 @@
     <script src="test.js"></script>
     <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.5.1/build/overlay/assets/skins/sam/overlay.css" />
     <link id="test_stylesheet" rel="stylesheet" type="text/css" href="test.css" />
-    <style>
-      #scratch-canvas {
-        image-rendering: -moz-crisp-edges;
-        image-rendering: -webkit-optimize-contrast;
-        width: 50px;
-        height: 50px;
-      }
-    </style>
   </head>
   <body>
-    <canvas id="scratch-canvas" style="display:none"></canvas>
-    <canvas id="final-canvas"></canvas>
+    <canvas id="preview"></canvas>
   </body>
 </html>
