--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <html>
   <head>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
     <script src="http://yui.yahooapis.com/3.5.1/build/yui/yui-min.js"></script>
     <script src="test.js"></script>
+    <script src="spectrum/spectrum.js"></script>
     <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.5.1/build/overlay/assets/skins/sam/overlay.css" />
+    <link rel="stylesheet" type="text/css" href="spectrum/spectrum.css" />
     <link id="test_stylesheet" rel="stylesheet" type="text/css" href="test.css" />
   </head>
   <body>
-    <canvas id="preview"></canvas>
   </body>
 </html>
