--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
   <head>
     <!-- Third party -->
-    <script src="http://yui.yahooapis.com/3.6.0/build/yui/yui-min.js"></script>
+    <script src="http://yui.yahooapis.com/3.7.1/build/yui/yui-min.js"></script>
     <!-- <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.5.1/build/widget/assets/skins/sam/widget.css" /> -->
     <!-- Our stuff -->
-    <link id="test_stylesheet" rel="stylesheet" type="text/css" href="test.css" />
-    <script src="test.js"></script>
+    <link rel="stylesheet" type="text/css" href="main.css" />
+    <script src="main.js"></script>
   </head>
   <body>
   </body>
