First set of specs using Jasmine

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
   <head>
     <!-- Third party -->
     <script src="http://yui.yahooapis.com/3.7.1/build/yui/yui-min.js"></script>
-    <!-- <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.5.1/build/widget/assets/skins/sam/widget.css" /> -->
     <!-- Our stuff -->
     <link rel="stylesheet" type="text/css" href="main.css" />
+    <script src="config.js"></script>
     <script src="main.js"></script>
   </head>
   <body>
